0.2.1
Tool output pane height now saved at exit.
Added menu 'Get Plugins' to 'Help' menu to get more plugins from my website.
Changed some plugin interface names so its less confusing.
Added top,left.right and bottom user vboxs to main window for use in plugins.
Changed the build for the barber pole  as a fix for ubuntu 12.04.
Down graded the required version of gmodule as a fix for ubuntu 12.04.
Path to KKEdit's temp folder now passed to plugins.
Added about box to example plugin.
Added plugin icon.
Plugins can now be enabled/disabled without restart.

0.2.0
Installed example plugin to DATADIR/plugins.
Plugins can now be enabled and disabled from the plug prefs.
Moved plug code to PluginClass;
Fixed not finding more than one plugin.
Fixed Makefile dependency.
Fixed built in doc viewer not showing correct title.
Started plugin prefs.
Prelim testing on xubuntu OK.
Fixed bug when using single instance re-running init when opeing new file.
Started help for plugins.
Plugins can now call showDocView.
Added kkedit-plugins.h.
Added test plugin.
Started plugins code.
Add caret browsing to docviewer.

0.1.9
Fixed 'Back' segfault.
Made progressbar always stay on top.
Minor fix for default Doxyfile.
Example tools are now installed at "$(DESTDIR)$(pkgdatadir)/Example External Tools", as the packaged versions were not installing them.
Added option to display a progress bar when running external tool, can be controled from the tool.
Removed the use of tempfile, now uses a tempory folder and internally generated random names.
Added progress bar for long documentaion ops.
Fixed opening file from docs not respecting no duplicates when opening link.
Better file integration with doxygen.
Added missing keyboard accelerators for opening menus from keyboard (ALT-F for file menu etc ).
Fixed regex crash when using badly formed replace string.
Improved string slicing code.